Base Card UI (#2)
* Remove react/require-default-props lint rule

* More file types to lint check

* Add ActivityIndicator and useRotationAnimation hook

* Add Tranwall svg logo

* Add Card component

* Add bg colours for cards states

* Add Kredit font. Custom tailwind font scale.

* Wrap main nav in SafeAreaProvider

* Move SafeAreaView. Add SafeAreaProvider.

* Card clickable. Add bottom transaction area.

* Fix card type bg order

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ios": "react-native run-ios",
     "start": "react-native start --reset-cache",
     "test": "jest",
-    "lint": "eslint './src/**/*.{ts,tsx}'",
+    "lint": "eslint './src/**/*.{js,ts,tsx,json}'",
     "type-check": "tsc --build plugins/typescript/template/tsconfig.json",
     "podinstall": "cd ios && pod install && cd ..",
     "reinstall-pods": "rm -rf ios/Pods && yarn podinstall",
