--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "reinstall-pods": "rm -rf ios/Pods && yarn podinstall",
     "reinstall-modules": "watchman watch-del-all && rm -rf ./node_modules && rm -rf /tmp/metro-* && yarn install",
     "reinstall": "yarn reinstall-modules && yarn reinstall-pods",
+    "check-format": "./node_modules/.bin/prettier --check .",
     "format": "./node_modules/.bin/prettier --write ."
   },
   "dependencies": {
@@ -51,15 +52,23 @@
     "@types/react-native": "^0.65.1",
     "@types/react-redux": "^7.1.18",
     "@types/react-test-renderer": "^17.0.1",
+    "@typescript-eslint/eslint-plugin": "^4.29.3",
+    "@typescript-eslint/parser": "^4.29.3",
     "babel-jest": "^26.6.3",
     "babel-plugin-module-resolver": "^4.0.0",
-    "eslint": "^7.22.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-typescript": "^14.0.0",
     "eslint-import-resolver-babel-module": "^5.1.2",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jest": "^24.3.5",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.21.5",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.66.0",
+    "prettier": "^2.4.1",
     "react-native-codegen": "^0.0.7",
     "react-test-renderer": "17.0.2",
     "typescript": "^4.4.3"
