--- a/tsconfig.example.json
+++ b/tsconfig.example.json
@@ -16,10 +16,5 @@
       "@/*": ["./*"]
     }
   },
-  "exclude": [
-    "node_modules",
-    "babel.config.js",
-    "metro.config.js",
-    "jest.config.js"
-  ]
+  "exclude": ["node_modules", "babel.config.js", "metro.config.js", "jest.config.js"]
 }
