--- a/ios/Podfile
+++ b/ios/Podfile
@@ -25,5 +25,11 @@ target 'TranwallMobile' do
 
   post_install do |installer|
     react_native_post_install(installer)
+
+    installer.pods_project.targets.each do |target|
+      target.build_configurations.each do |config|
+        config.build_settings["ONLY_ACTIVE_ARCH"] = "NO"
+      end
+    end
   end
 end
