--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,8 +28,8 @@ jobs:
       - name: Yarn
         run: yarn
 
-      - name: Lint
+      - name: Lint Check
         run: yarn run lint
 
-      - name: Format
-        run: yarn run format
+      - name: Format Check
+        run: yarn run check-format
