Base Onboarding UI & Nav (#9)
* Add Apollo and GQL

* iOS splash update. Use blue and TW logo

* Add Auth nav and base login screen

* Update font scale. Add colours.

* Login screen copy

* Fix main nav params

* Smaller activity indicator on splash

* Update button styles

* Readme tweak

* Add Authstack to Application with dummy login check

* Add ApolloProvider wrapper. Commented out cache code

* Add primaryDark color

* Add custom TextInput component. Add to login screen

* Add react-native-keyboard-aware-scroll-view

* Add onboarding icons

* Update Icons to aspect 1. Move to components directory

* Update tailwind border config

* Add onboarding copy

* Fix tabBar icon routes

* Move SVG components to Components Directory

* Add BackArrowButton

* Add OnboardingHeader

* Add KeyboardAwareScrollView to Login

* Update button default text color

* Remove Brand

* Add EnterMobileScreen

* Add VerifyAccountScreen

* Add SelectOrganizationScreen and OrganizationCard

* Add ForgotPasswordScreen

* Add SetPasswordScreen with PasswordRuleRow

* Hook up onboarding screens to AuthNav

* Formatting and import fixes

* Remove KeyboardAwareScrollView (causing error)

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "format": "./node_modules/.bin/prettier --write './src/**/*.{js,ts,tsx,json}' && yarn lint --fix"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.15",
     "@react-native-async-storage/async-storage": "^1.15.7",
     "@react-native-masked-view/masked-view": "^0.2.6",
     "@react-navigation/bottom-tabs": "^6.0.5",
@@ -25,6 +26,7 @@
     "@reduxjs/toolkit": "^1.6.1",
     "@thecodingmachine/redux-toolkit-wrapper": "2.0.1",
     "axios": "^0.21.4",
+    "graphql": "^15.6.0",
     "i18next": "^20.6.1",
     "lodash": "^4.17.21",
     "prop-types": "^15.7.2",
@@ -33,6 +35,7 @@
     "react-native": "0.65.1",
     "react-native-flipper": "^0.103.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-reanimated": "^2.2.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.7.2",
