Adding app center (#10)

--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@react-navigation/stack": "^5.x",
     "@reduxjs/toolkit": "^1.6.1",
     "@thecodingmachine/redux-toolkit-wrapper": "2.0.1",
+    "appcenter": "^4.3.0",
+    "appcenter-analytics": "^4.3.0",
+    "appcenter-crashes": "^4.3.0",
     "axios": "^0.21.4",
     "graphql": "^15.6.0",
     "i18next": "^20.6.1",
