--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "appcenter-analytics": "^4.3.0",
     "appcenter-crashes": "^4.3.0",
     "axios": "^0.21.4",
+    "date-fns": "^2.25.0",
     "graphql": "^15.6.0",
     "i18next": "^20.6.1",
     "lodash": "^4.17.21",
