--- a/ios/TranwallMobile/Info.plist
+++ b/ios/TranwallMobile/Info.plist
@@ -57,6 +57,11 @@
 		<string>kredit_embossed.ttf</string>
 		<string>kredit_shine.ttf</string>
 		<string>kredit.ttf</string>
+		<string>SpaceGrotesk-Bold.ttf</string>
+		<string>SpaceGrotesk-Light.ttf</string>
+		<string>SpaceGrotesk-Medium.ttf</string>
+		<string>SpaceGrotesk-Regular.ttf</string>
+		<string>SpaceGrotesk-SemiBold.ttf</string>
 	</array>
 </dict>
 </plist>
