--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@apollo/client": "^3.4.15",
     "@gorhom/bottom-sheet": "^4.1.3",
     "@react-native-async-storage/async-storage": "^1.15.7",
+    "@react-native-clipboard/clipboard": "^1.9.0",
+    "@react-native-community/blur": "^3.6.0",
     "@react-native-masked-view/masked-view": "^0.2.6",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/core": "^6.1.0",
