--- a/ios/Podfile
+++ b/ios/Podfile
@@ -3,7 +3,7 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 
 platform :ios, '11.0'
 
-target 'TranwallMobile' do
+target 'ClearSpendMobile' do
   config = use_native_modules!
 
   use_react_native!(
@@ -12,24 +12,42 @@ target 'TranwallMobile' do
     :hermes_enabled => false
   )
 
-  target 'TranwallMobileTests' do
+  target 'ClearSpendMobileTests' do
     inherit! :complete
     # Pods for testing
   end
 
-  # Enables Flipper.
-  #
+  # Enables Flipper
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable the next line.
-  use_flipper!({ 'Flipper' => '0.94.1', 'Flipper-Folly' => '2.6.7', 'Flipper-RSocket' => '1.4.3'})
+  use_flipper!({ 'Flipper' => '0.93.0', 'Flipper-Folly' => '2.6.7', 'Flipper-RSocket' => '1.4.3'})
+  # use_flipper!()
 
   post_install do |installer|
     react_native_post_install(installer)
 
+    # Apple Silicon builds require a library path tweak for Swift library discovery or "symbol not found" for swift things
+    installer.aggregate_targets.each do |aggregate_target|
+      aggregate_target.user_project.native_targets.each do |target|
+        target.build_configurations.each do |config|
+          config.build_settings['LIBRARY_SEARCH_PATHS'] = ['$(SDKROOT)/usr/lib/swift', '$(inherited)']
+        end
+      end
+      aggregate_target.user_project.save
+    end
+
+    # Flipper requires a crude patch to bump up iOS deployment target, else "error: thread-local storage is not supported for the current target"
+    # Bumping iOS deployment target to match react-native (iOS 11 now) as a temp fix
     installer.pods_project.targets.each do |target|
       target.build_configurations.each do |config|
         config.build_settings["ONLY_ACTIVE_ARCH"] = "NO"
-      end
+        config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '11.0'
+       end
     end
+
+    # BUT if you bump iOS deployment target (above), Flipper error "Time.h:52:17: error: typedef redefinition with different types"
+    # We need to make one crude patch to RCT-Folly - set `__IPHONE_10_0` to our iOS target + 1
+    # See https://github.com/facebook/flipper/issues/834
+    `sed -i -e  $'s/__IPHONE_10_0/__IPHONE_12_0/' #{installer.sandbox.root}/RCT-Folly/folly/portability/Time.h`
   end
 end
