--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "TranwallMobile",
+  "name": "ClearSpendMobile",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -44,7 +44,7 @@
     "react": "17.0.2",
     "react-i18next": "^11.12.0",
     "react-native": "0.65.1",
-    "react-native-flipper": "^0.103.0",
+    "react-native-flipper": "^0.118.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-reanimated": "^2.2.2",
