--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "redux": "^4.1.1",
     "redux-flipper": "^2.0.0",
     "redux-persist": "^6.0.0",
-    "tailwind-react-native-classnames": "^1.5.1"
+    "twrnc": "^2.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
