--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lint": "eslint './src/**/*.{js,ts,tsx,json}'",
     "format": "./node_modules/.bin/prettier --write './src/**/*.{js,ts,tsx,json}' && yarn lint --fix",
     "localserver": "cd apolloserver && node index.js && cd ..",
+    "restserver": "cd restserver && node index.js && cd ..",
     "format-server": "./node_modules/.bin/prettier --write './apolloserver/**/*.{js,ts,tsx,json}' && eslint './apolloserver/**/*.{js,ts,tsx,json}' --fix"
   },
   "dependencies": {
@@ -32,15 +33,18 @@
     "@reduxjs/toolkit": "^1.6.1",
     "@thecodingmachine/redux-toolkit-wrapper": "2.0.1",
     "@types/react-native-snap-carousel": "^3.8.4",
+    "apollo-link-rest": "^0.8.0-beta.0",
     "appcenter": "^4.3.0",
     "appcenter-analytics": "^4.3.0",
     "appcenter-crashes": "^4.3.0",
     "axios": "^0.21.4",
     "date-fns": "^2.25.0",
     "graphql": "^15.6.0",
+    "graphql-anywhere": "^4.2.7",
     "i18next": "^20.6.1",
     "lodash": "^4.17.21",
     "prop-types": "^15.7.2",
+    "qs": "^6.10.1",
     "react": "17.0.2",
     "react-i18next": "^11.12.0",
     "react-native": "0.65.1",
