--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "reinstall": "yarn reinstall-modules && yarn reinstall-pods",
     "check-format": "./node_modules/.bin/prettier --check './src/**/*.{js,ts,tsx,json}'",
     "lint": "eslint './src/**/*.{js,ts,tsx,json}'",
-    "format": "./node_modules/.bin/prettier --write './src/**/*.{js,ts,tsx,json}' && yarn lint --fix",
+    "prettier": "./node_modules/.bin/prettier --write './src/**/*.{js,ts,tsx,json}'",
+    "format": "yarn prettier && yarn lint --fix",
     "localserver": "cd apolloserver && node index.js && cd ..",
     "restserver": "cd restserver && node index.js && cd ..",
     "format-server": "./node_modules/.bin/prettier --write './apolloserver/**/*.{js,ts,tsx,json}' && eslint './apolloserver/**/*.{js,ts,tsx,json}' --fix"
