--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-native-flipper": "^0.120.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-maps": "^0.29.4",
     "react-native-reanimated": "^2.2.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.7.2",
