[MA-147] Remove Apollo Server code and Readme content (#47)
* Remove apollo server

* Update package.json scripts

* Update package.json scripts

* Update ReadMe

--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "reinstall": "yarn reinstall-modules && yarn reinstall-pods",
     "check-format": "./node_modules/.bin/prettier --check './src/**/*.{js,ts,tsx,json}'",
     "lint": "eslint './src/**/*.{js,ts,tsx,json}'",
+    "lint-server": "eslint './restserver/**/*.{js,ts,tsx,json}' --fix",
     "prettier": "./node_modules/.bin/prettier --write './src/**/*.{js,ts,tsx,json}'",
+    "prettier-server": "./node_modules/.bin/prettier --write './restserver/**/*.{js,ts,tsx,json}'",
+    "format-server": "yarn prettier-server && yarn lint-server",
     "format": "yarn prettier && yarn lint --fix",
-    "localserver": "cd apolloserver && node index.js && cd ..",
-    "restserver": "cd restserver && node index.js && cd ..",
-    "format-server": "./node_modules/.bin/prettier --write './apolloserver/**/*.{js,ts,tsx,json}' && eslint './apolloserver/**/*.{js,ts,tsx,json}' --fix"
+    "restserver": "cd restserver && node index.js && cd .."
   },
   "dependencies": {
     "@apollo/client": "^3.4.15",
