--- a/ios/ClearSpendMobile/Info.plist
+++ b/ios/ClearSpendMobile/Info.plist
@@ -36,7 +36,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string/>
+	<string></string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -53,15 +53,30 @@
 	<false/>
 	<key>UIAppFonts</key>
 	<array>
-		<string>kredit_back.ttf</string>
-		<string>kredit_embossed.ttf</string>
-		<string>kredit_shine.ttf</string>
-		<string>kredit.ttf</string>
-		<string>SpaceGrotesk-Bold.ttf</string>
-		<string>SpaceGrotesk-Light.ttf</string>
-		<string>SpaceGrotesk-Medium.ttf</string>
-		<string>SpaceGrotesk-Regular.ttf</string>
-		<string>SpaceGrotesk-SemiBold.ttf</string>
+		<string>PPNeueMontreal-Bold.ttf</string>
+		<string>PPNeueMontreal-BoldItalic.ttf</string>
+		<string>PPNeueMontreal-Book.ttf</string>
+		<string>PPNeueMontreal-BookItalic.ttf</string>
+		<string>PPNeueMontreal-Italic.ttf</string>
+		<string>PPNeueMontreal-Light.ttf</string>
+		<string>PPNeueMontreal-LightItalic.ttf</string>
+		<string>PPNeueMontreal-Medium.ttf</string>
+		<string>PPNeueMontreal-MediumItalic.ttf</string>
+		<string>PPNeueMontreal-Regular.ttf</string>
+		<string>PPNeueMontreal-SemiBold.ttf</string>
+		<string>PPNeueMontreal-SemiBoldItalic.ttf</string>
+		<string>PPNeueMontreal-Thin.ttf</string>
+		<string>PPNeueMontreal-ThinItalic.ttf</string>
+		<string>PPNeueMontrealVariable.ttf</string>
+		<string>PPTelegraf-Black.ttf</string>
+		<string>PPTelegraf-Bold.ttf</string>
+		<string>PPTelegraf-Light.ttf</string>
+		<string>PPTelegraf-Medium.ttf</string>
+		<string>PPTelegraf-Regular.ttf</string>
+		<string>PPTelegraf-SemiBold.ttf</string>
+		<string>PPTelegraf-UltraBold.ttf</string>
+		<string>PPTelegraf-UltraLight.ttf</string>
+		<string>PPTelegraf-Variable.ttf</string>
 	</array>
 </dict>
 </plist>
