[MA-116] Environment variables with AppCenter & RN Config (#51)
* pre-build.sh

* Add react-native-config

* Add apply to app/build.gradle

* Update Podfile.lock

* Add CS_ prefix to env vars

* Add .env.example file

* Add .env to gitignore

* Update readme

* Clean config imports

* settings.gradle

* MainApplication.java

* Podfile and Podfile.lock

* Update build script

* Delete old config files

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -17,6 +17,8 @@ target 'ClearSpendMobile' do
     :hermes_enabled => false
   )
 
+  pod 'react-native-config', :path => '../node_modules/react-native-config'
+
   target 'ClearSpendMobileTests' do
     inherit! :complete
     # Pods for testing
