--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react": "17.0.2",
     "react-i18next": "^11.12.0",
     "react-native": "0.65.1",
+    "react-native-config": "^1.4.5",
     "react-native-flipper": "^0.120.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
