[MA-14] Freeze & unfreeze card (#54)
* Freezing/Unfreezing card in wallet screen/card details screen
* Restserver block and unblock patches
* Moving cards, card details queries, freeze and unfreeze mutations to an specific folder

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-native": "0.65.1",
     "react-native-config": "^1.4.5",
     "react-native-flipper": "^0.120.0",
+    "react-native-flipper-apollo-devtools": "^0.0.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "^0.29.4",
