--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "graphql-anywhere": "^4.2.7",
     "i18next": "^20.6.1",
     "lodash": "^4.17.21",
+    "mixpanel-react-native": "^1.3.4",
     "prop-types": "^15.7.2",
     "qs": "^6.10.1",
     "react": "17.0.2",
