--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "restserver": "cd restserver && node index.js && cd .."
   },
   "dependencies": {
-    "@apollo/client": "^3.4.15",
+    "@apollo/client": "3.4.15",
     "@gorhom/bottom-sheet": "^4.1.3",
     "@react-native-async-storage/async-storage": "^1.15.7",
     "@react-native-clipboard/clipboard": "^1.9.0",
@@ -53,11 +53,10 @@
     "react-native": "0.65.1",
     "react-native-config": "^1.4.5",
     "react-native-flipper": "^0.120.0",
-    "react-native-flipper-apollo-devtools": "^0.0.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "^0.29.4",
-    "react-native-reanimated": "^2.2.2",
+    "react-native-reanimated": "2.2.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.7.2",
     "react-native-snap-carousel": "^3.9.1",
