--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "prettier-server": "./node_modules/.bin/prettier --write './restserver/**/*.{js,ts,tsx,json}'",
     "format-server": "yarn prettier-server && yarn lint-server",
     "format": "yarn prettier && yarn lint --fix",
-    "restserver": "cd restserver && node index.js && cd .."
+    "restserver": "cd restserver && node index.js && cd ..",
+    "devices-ios": "xcrun xctrace list devices",
+    "devices-android": "adb devices"
   },
   "dependencies": {
     "@apollo/client": "3.4.15",
@@ -51,6 +53,7 @@
     "react": "17.0.2",
     "react-i18next": "^11.12.0",
     "react-native": "0.65.1",
+    "react-native-camera": "^4.2.1",
     "react-native-config": "^1.4.5",
     "react-native-flipper": "^0.120.0",
     "react-native-gesture-handler": "^1.10.3",
