--- a/restserver/package.json
+++ b/restserver/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "async-exit-hook": "^2.0.1",
+    "express": "^4.17.1",
+    "express-fileupload": "^1.2.1"
   }
 }
