--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@reduxjs/toolkit": "^1.6.1",
     "@thecodingmachine/redux-toolkit-wrapper": "2.0.1",
     "@types/react-native-snap-carousel": "^3.8.4",
-    "apollo-link-rest": "^0.8.0-beta.0",
+    "apollo-link-rest": "0.8.0",
     "appcenter": "^4.3.0",
     "appcenter-analytics": "^4.3.0",
     "appcenter-crashes": "^4.3.0",
