[MA-170] Generated types from server, moved gql queries to folder only

--- a/package.json
+++ b/package.json
@@ -4,24 +4,25 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "start": "react-native start --reset-cache",
-    "test": "jest",
-    "type-check": "tsc --build plugins/typescript/template/tsconfig.json",
-    "podinstall": "cd ios && pod install && cd ..",
-    "reinstall-pods": "rm -rf ios/Pods && yarn podinstall",
-    "reinstall-modules": "watchman watch-del-all && rm -rf ./node_modules && rm -rf /tmp/metro-* && yarn install",
-    "reinstall": "yarn reinstall-modules && yarn reinstall-pods",
     "check-format": "./node_modules/.bin/prettier --check './src/**/*.{js,ts,tsx,json}'",
-    "lint": "eslint './src/**/*.{js,ts,tsx,json}'",
-    "lint-server": "eslint './restserver/**/*.{js,ts,tsx,json}' --fix",
-    "prettier": "./node_modules/.bin/prettier --write './src/**/*.{js,ts,tsx,json}'",
-    "prettier-server": "./node_modules/.bin/prettier --write './restserver/**/*.{js,ts,tsx,json}'",
+    "devices-android": "adb devices",
+    "devices-ios": "xcrun xctrace list devices",
     "format-server": "yarn prettier-server && yarn lint-server",
     "format": "yarn prettier && yarn lint --fix",
+    "generate": "node ./scripts/generateTypes.ts && git add ./src/generated/capital.ts",
+    "ios": "react-native run-ios",
+    "lint-server": "eslint './restserver/**/*.{js,ts,tsx,json}' --fix",
+    "lint": "eslint './src/**/*.{js,ts,tsx,json}'",
+    "podinstall": "cd ios && pod install && cd ..",
+    "prettier-server": "./node_modules/.bin/prettier --write './restserver/**/*.{js,ts,tsx,json}'",
+    "prettier": "./node_modules/.bin/prettier --write './src/**/*.{js,ts,tsx,json}'",
+    "reinstall-modules": "watchman watch-del-all && rm -rf ./node_modules && rm -rf /tmp/metro-* && yarn install",
+    "reinstall-pods": "rm -rf ios/Pods && yarn podinstall",
+    "reinstall": "yarn reinstall-modules && yarn reinstall-pods",
     "restserver": "cd restserver && node index.js && cd ..",
-    "devices-ios": "xcrun xctrace list devices",
-    "devices-android": "adb devices"
+    "start": "react-native start --reset-cache",
+    "test": "jest",
+    "type-check": "tsc --build plugins/typescript/template/tsconfig.json"
   },
   "dependencies": {
     "@apollo/client": "3.4.15",
@@ -100,6 +101,7 @@
     "prettier": "^2.4.1",
     "react-native-codegen": "^0.0.7",
     "react-test-renderer": "17.0.2",
+    "swagger-typescript-api": "^9.3.1",
     "typescript": "^4.4.3"
   },
   "jest": {
