[MA-202] Created new screen for picking FaceID/PIN for login verification (PR #6)
[MA-202] Created new screen for picking FaceID/PIN for login verification

* [MA-202] Created new screen for picking FaceID/PIN for login verification

* Merged main into MA-202
* [MA-202] Added secure storage, Biometric support, and prep for PIN

* Merge branch 'MA-202' of https://bitbucket.org/tranwallteam/clearspend-mobile into MA-202

* [MA-204][MA-208] Functional biometric login

* [MA-204][MA-208] Improved navigation to Bio Onboarding page, added page for inputting biometrics to log in

* Removed unused package


Approved-by: Carli Botes

--- a/ios/ClearSpendMobile/Info.plist
+++ b/ios/ClearSpendMobile/Info.plist
@@ -35,6 +35,12 @@
 			</dict>
 		</dict>
 	</dict>
+  <key>NSFaceIDUsageDescription</key>
+  <string>Use Face ID to log in securely</string>
+  <key>NSCameraUsageDescription</key>
+  <string>Use your camera to take photos of receipts</string>
+  <key>NSPhotoLibraryUsageDescription</key>
+  <string>Use your photo library to upload receipts</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Location is not required to use this app.</string>
 	<key>UILaunchStoryboardName</key>
