--- a/ios/Podfile
+++ b/ios/Podfile
@@ -17,6 +17,11 @@ target 'ClearSpendMobile' do
     :hermes_enabled => false
   )
 
+  permissions_path = '../node_modules/react-native-permissions/ios'
+
+  pod 'Permission-Camera', :path => "#{permissions_path}/Camera"
+  pod 'Permission-FaceID', :path => "#{permissions_path}/FaceID"
+  pod 'Permission-PhotoLibrary', :path => "#{permissions_path}/PhotoLibrary"
 
   target 'ClearSpendMobileTests' do
     inherit! :complete
