--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "@react-navigation/stack": "^6.0.7",
     "@reduxjs/toolkit": "^1.6.1",
     "@thecodingmachine/redux-toolkit-wrapper": "2.0.1",
-    "@types/react-native-snap-carousel": "^3.8.4",
     "appcenter": "^4.3.0",
     "appcenter-analytics": "^4.3.0",
     "appcenter-crashes": "^4.3.0",
@@ -53,15 +52,18 @@
     "react": "17.0.2",
     "react-i18next": "^11.12.0",
     "react-native": "0.65.1",
+    "react-native-biometrics": "^2.1.4",
     "react-native-camera": "^4.2.1",
     "react-native-config": "^1.4.5",
     "react-native-flipper": "^0.120.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "^0.29.4",
+    "react-native-permissions": "^3.2.0",
     "react-native-reanimated": "2.2.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.7.2",
+    "react-native-sensitive-info": "^5.5.8",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^12.1.1",
     "react-native-webview": "^11.15.1",
@@ -70,6 +72,7 @@
     "redux": "^4.1.1",
     "redux-flipper": "^2.0.0",
     "redux-persist": "^6.0.0",
+    "redux-persist-sensitive-storage": "^1.0.0",
     "twrnc": "^2.0.3"
   },
   "devDependencies": {
@@ -81,6 +84,7 @@
     "@types/lodash": "^4.14.175",
     "@types/react": "^17.0.24",
     "@types/react-native": "^0.65.1",
+    "@types/react-native-snap-carousel": "^3.8.4",
     "@types/react-redux": "^7.1.18",
     "@types/react-test-renderer": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
