--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.1.3",
-    "@react-native-async-storage/async-storage": "^1.15.7",
     "@react-native-clipboard/clipboard": "^1.9.0",
     "@react-native-community/blur": "^3.6.0",
     "@react-native-masked-view/masked-view": "^0.2.6",
@@ -45,6 +44,7 @@
     "graphql": "^15.6.0",
     "graphql-anywhere": "^4.2.7",
     "i18next": "^20.6.1",
+    "intl": "^1.2.5",
     "lodash": "^4.17.21",
     "mixpanel-react-native": "^1.3.4",
     "prop-types": "^15.7.2",
@@ -59,6 +59,7 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "^0.29.4",
+    "react-native-mmkv": "^2.0.0",
     "react-native-permissions": "^3.2.0",
     "react-native-reanimated": "2.2.2",
     "react-native-safe-area-context": "^3.3.2",
