--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "intl": "^1.2.5",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
-    "mixpanel-react-native": "^1.3.4",
+    "mixpanel-react-native": "^1.3.7",
     "prop-types": "^15.7.2",
     "qs": "^6.10.1",
     "react": "17.0.2",
@@ -84,6 +84,8 @@
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@testing-library/jest-native": "^4.0.4",
+    "@testing-library/react-native": "^9.0.0",
     "@types/fbemitter": "^2.0.32",
     "@types/jest": "^27.0.2",
     "@types/lodash": "^4.14.175",
@@ -114,27 +116,5 @@
     "react-test-renderer": "17.0.2",
     "swagger-typescript-api": "^9.3.1",
     "typescript": "^4.4.3"
-  },
-  "jest": {
-    "preset": "react-native",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "jsx",
-      "json",
-      "node"
-    ],
-    "moduleNameMapper": {
-      ".+\\.(css|styl|less|sass|scss|png|jpg|ttf|woff|woff2)$": "identity-obj-proxy"
-    },
-    "setupFiles": [
-      "./jest.setup.js"
-    ],
-    "timers": "fakfe",
-    "testEnvironment": "jsdom",
-    "transformIgnorePatterns": [
-      "/node_modules/(?!@react-native|react-native)"
-    ]
   }
 }
