--- a/restserver/package.json
+++ b/restserver/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "async-exit-hook": "^2.0.1",
     "express": "^4.17.1",
-    "express-fileupload": "^1.2.1"
+    "express-fileupload": "^1.2.1",
+    "jsonwebtoken": "^8.5.1"
   }
 }
