[MA-173] upload receipt file system
Approved-by: Rory O'Connor

--- a/package.json
+++ b/package.json
@@ -54,15 +54,18 @@
     "react-native": "0.65.1",
     "react-native-autocomplete-dropdown": "^1.1.6",
     "react-native-biometrics": "^2.1.4",
+    "react-native-blob-util": "^0.14.0",
     "react-native-camera": "^4.2.1",
     "react-native-config": "^1.4.5",
     "react-native-confirmation-code-field": "^7.3.0",
+    "react-native-document-picker": "^8.0.0",
     "react-native-flipper": "^0.120.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-picker": "^4.7.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "^0.29.4",
     "react-native-mmkv": "^2.0.0",
+    "react-native-pdf": "^6.4.0",
     "react-native-permissions": "^3.2.0",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-reanimated": "2.2.2",
