[MA-149] Launching forgot/reset web app link Approved-by: Carli Botes Approved-by: Rory O'Connor

--- a/.env.example
+++ b/.env.example
@@ -8,5 +8,6 @@ FA_URL='http://localhost:8000'
 FA_CLIENT_ID=''
 FA_CLIENT_SECRET=''
 API_URL='http://localhost:8000'
+WEB_URL='https://capital.dev.tranwall.net'
 STRIPE_PUBLISHABLE_KEY=''
 STRIPE_ACCOUNT=''
