[Ad Hoc] Update main with successful build changes - require arm64 (PR #59)
* Require arm64, use pod repo update, update archs in xcode proj

* Revert "Merged in MA-133 (pull request #58)"

This reverts commit 6eb37b80aedb2776347d41794555797727a3bfa3.


Approved-by: Carli Botes

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "lint-server": "eslint './restserver/**/*.{js,ts,tsx,json}' --fix",
     "prettier": "prettier --write './src/**/*.{js,ts,tsx,json}'",
     "prettier-server": "prettier --write './restserver/**/*.{js,ts,tsx,json}'",
-    "podinstall": "cd ios && pod install && cd ..",
+    "podinstall": "cd ios && pod install --repo-update && cd ..",
     "reinstall-modules": "watchman watch-del-all && rm -rf ./node_modules && rm -rf /tmp/metro-* && yarn install",
     "reinstall-pods": "rm -rf ios/Pods && yarn podinstall",
     "reinstall": "yarn reinstall-modules && yarn reinstall-pods",
@@ -35,9 +35,9 @@
     "@react-navigation/stack": "^6.0.7",
     "@reduxjs/toolkit": "^1.6.1",
     "@thecodingmachine/redux-toolkit-wrapper": "2.0.1",
-    "appcenter": "4.4.3",
-    "appcenter-analytics": "4.4.3",
-    "appcenter-crashes": "4.4.3",
+    "appcenter": "^4.3.0",
+    "appcenter-analytics": "^4.3.0",
+    "appcenter-crashes": "^4.3.0",
     "axios": "^0.21.4",
     "axios-auth-refresh": "^3.2.1",
     "date-fns": "^2.25.0",
