--- a/ios/ClearSpendMobile/Info.plist
+++ b/ios/ClearSpendMobile/Info.plist
@@ -80,7 +80,7 @@
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
-		<string>armv7</string>
+		<string>arm64</string>
 	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
