[Ad Hoc] Update android and ios package names (PR #60)
* Update android and ios package names


Approved-by: Carli Botes

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -127,7 +127,7 @@ android {
     compileSdkVersion rootProject.ext.compileSdkVersion
 
     defaultConfig {
-        applicationId "com.clearspendmobile"
+        applicationId "com.clearspend.android"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 35
