--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -28,6 +28,6 @@ pipelines:
             - BUILD_DETAILS=($BUMP_BUILD_OUTPUT)
             - git commit -am "[skip ci] Bump to Version ${BUILD_DETAILS[0]} (Build ${BUILD_DETAILS[1]})"
             - git tag "release/${BUILD_DETAILS[0]}/build/${BUILD_DETAILS[1]}"
-            - git merge main qa
-            - git push origin main
-            - git push origin qa
+            - git checkout --track origin/qa
+            - git merge main
+            - git push
