--- a/ios/AppCenter-Config.plist
+++ b/ios/AppCenter-Config.plist
@@ -3,6 +3,6 @@
 <plist version="1.0">
 <dict>
 	<key>AppSecret</key>
-	<string>44a5012a-33e1-47f3-87f4-e84c76406cae</string>
+	<string>SECRET_REPLACED_HERE</string>
 </dict>
 </plist>
