--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,17 @@
 # The values below will work with the local restserver.
 # Find prod values in App Center or in 1Password and copy them into your .env file.
 
+# To set up variables for each of the 3 build variants (dev, uat, prod)
+# Use this example to create 3 env files:
+# .env.dev
+# .env.uat
+# .env.prod
+
+# Using the package.json commands to run each variant will pick up the variables from the relevant .env file:
+# yarn ios/android -> .dev
+# yarn ios-uat/android-uat -> .uat
+# yarn ios-prod/android-prod -> .prod
+
 FA_URL='http://localhost:8000'
 FA_CLIENT_ID=''
 FA_CLIENT_SECRET=''
