--- a/ios/ClearSpendMobile.xcodeproj/xcshareddata/xcschemes/ClearSpendMobile.xcscheme
+++ b/ios/ClearSpendMobile.xcodeproj/xcshareddata/xcschemes/ClearSpendMobile.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "ClearSpendMobile.app"
+               BuildableName = "ClearSpend.app"
                BlueprintName = "ClearSpendMobile"
                ReferencedContainer = "container:ClearSpendMobile.xcodeproj">
             </BuildableReference>
@@ -55,7 +55,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "ClearSpendMobile.app"
+            BuildableName = "ClearSpend.app"
             BlueprintName = "ClearSpendMobile"
             ReferencedContainer = "container:ClearSpendMobile.xcodeproj">
          </BuildableReference>
@@ -72,7 +72,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "ClearSpendMobile.app"
+            BuildableName = "ClearSpend.app"
             BlueprintName = "ClearSpendMobile"
             ReferencedContainer = "container:ClearSpendMobile.xcodeproj">
          </BuildableReference>
