--- a/ios/Podfile
+++ b/ios/Podfile
@@ -3,6 +3,14 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 
 platform :ios, '11.0'
 
+project 'ClearSpendMobile',
+'dev.Debug' => :debug,
+'dev.Release' => :release,
+'uat.Debug' => :debug,
+'uat.Release' => :release,
+'Debug' => :debug,
+'Release' => :release
+
 target 'ClearSpendMobile' do
 
   # React Native Maps dependencies
@@ -31,7 +39,8 @@ target 'ClearSpendMobile' do
   # Enables Flipper
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable the next line.
-  use_flipper!({ 'Flipper' => '0.93.0', 'Flipper-Folly' => '2.6.7', 'Flipper-RSocket' => '1.4.3'})
+  use_flipper!({ 'Flipper' => '0.93.0', 'Flipper-Folly' => '2.6.7', 'Flipper-RSocket' => '1.4.3'},
+               configurations: ['Debug', 'uat.Debug', 'dev.Debug'])
   # use_flipper!()
 
   post_install do |installer|
