[MA-63] Fix multi env android builds not picking up .env.dev/uat files (pull request #83)
* Add missing default config for react-native-config so env variables are picked up for each variant correctly


Approved-by: Rodrigo Mathias

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -147,6 +147,7 @@ android {
         versionCode 104
         versionName "1.1"
         missingDimensionStrategy 'react-native-camera', 'general'
+        resValue "string", "build_config_package", "com.clearspend.android"
     }
     splits {
         abi {
