[MA-317] Set Mixpanel to use an env variable (#84)
MA-317 => main

[Jira ticket MA-317](https://tranwall.atlassian.net/browse/MA-317)

Approved By: Rory O'Connor <Rory O'Connor>

--- a/.env.example
+++ b/.env.example
@@ -20,5 +20,6 @@ FA_CLIENT_ID=''
 FA_CLIENT_SECRET=''
 API_URL='http://localhost:8000'
 WEB_URL='https://capital.dev.tranwall.net'
+MIXPANEL_PROJECT_TOKEN=fae11a3a59ea09ae6e4e9192a99220fb
 STRIPE_PUBLISHABLE_KEY=''
 STRIPE_ACCOUNT=''
