[MA-287] Update nightly build script to handle uat and release branches (pull request #85)
* Update nightly build script to handle uat and release branches


Approved-by: Stephen (Stevo) Saucier

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -23,14 +23,17 @@ pipelines:
             - git fetch --unshallow
             - git config remote.origin.fetch "+refs/heads/*:refs/remotes/origin/*"
             - git fetch origin
-            - git diff origin/main..origin/qa --quiet && echo "No changes between main and qa, exiting" && exit 0 || echo "New changes in main not present in qa"
+            - git diff origin/main..origin/uat --quiet && echo "No changes between main and uat, exiting" && exit 0 || echo "New changes in main not present in uat"
             - yarn
             - echo "Bumping build numbers" && BUMP_BUILD_OUTPUT=$(yarn bump-build-number | tail -2 | head -1)
             - BUILD_DETAILS=($BUMP_BUILD_OUTPUT)
             - git commit -am "[skip ci] Bump to Version ${BUILD_DETAILS[0]} (Build ${BUILD_DETAILS[1]})"
             - git tag "release/${BUILD_DETAILS[0]}/build/${BUILD_DETAILS[1]}"
             - git push origin "release/${BUILD_DETAILS[0]}/build/${BUILD_DETAILS[1]}"
-            - git checkout --track origin/qa
+            - git checkout --track origin/uat
             - git merge -X theirs main
-            - git push origin qa
+            - git checkout --track origin/release
+            - git merge -X theirs uat
+            - git push origin uat
+            - git push origin release
             - git push origin main
