--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -30,10 +30,13 @@ pipelines:
             - git commit -am "[skip ci] Bump to Version ${BUILD_DETAILS[0]} (Build ${BUILD_DETAILS[1]})"
             - git tag "release/${BUILD_DETAILS[0]}/build/${BUILD_DETAILS[1]}"
             - git push origin "release/${BUILD_DETAILS[0]}/build/${BUILD_DETAILS[1]}"
-            - git checkout --track origin/uat
+            - git checkout --track origin/dev
             - git merge -X theirs main
+            - git checkout --track origin/uat
+            - git merge -X theirs dev
             - git checkout --track origin/release
             - git merge -X theirs uat
+            - git push origin dev
             - git push origin uat
             - git push origin release
             - git push origin main
