--- a/.env.example
+++ b/.env.example
@@ -15,11 +15,35 @@
 # yarn ios-uat/android-uat -> .uat
 # yarn ios-prod/android-prod -> .prod
 
-FA_URL='http://localhost:8000'
-FA_CLIENT_ID=''
-FA_CLIENT_SECRET=''
+# NOTE: builds not using the package.json commands will take variables from the default .env file
+# Aka building in XCode/Android Studio directly
+
+# URLs for each env:
+
+### DEV ENV
+#API_URL='https://api.capital.dev.tranwall.net'
+#FA_URL='https://fa.capital.dev.tranwall.net'
+#WEB_URL='https://capital.dev.tranwall.net'
+
+### UAT ENV
+#API_URL=https://api.capital.qa.clearspend.com
+#FA_URL=https://fa.capital.qa.clearspend.com
+#WEB_URL=https://capital.qa.clearspend.com
+
+### PROD ENV
+#API_URL=https://api.clearspend.com
+#FA_URL=https://fa.clearspend.com
+#WEB_URL=https://app.clearspend.com
+
+### LOCAL REST SERVER
+#API_URL='http://localhost:8000'
+#FA_URL='http://localhost:8000'
+#WEB_URL='https://capital.dev.tranwall.net'
+
 API_URL='http://localhost:8000'
+FA_URL='http://localhost:8000'
 WEB_URL='https://capital.dev.tranwall.net'
-MIXPANEL_PROJECT_TOKEN=fae11a3a59ea09ae6e4e9192a99220fb
+FA_CLIENT_ID=''
 STRIPE_PUBLISHABLE_KEY=''
 STRIPE_ACCOUNT=''
+MIXPANEL_PROJECT_TOKEN=fae11a3a59ea09ae6e4e9192a99220fb
