[Ad Hoc] Add app uses non exempt encryption key for dev/uat testflight (pull request #93)
* Add app uses non exempt encryption key for dev/uat testflight


Approved-by: Stephen (Stevo) Saucier

--- a/ios/ClearSpendMobile/Info.plist
+++ b/ios/ClearSpendMobile/Info.plist
@@ -28,6 +28,8 @@
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSExceptionDomains</key>
