--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -23,12 +23,14 @@ pipelines:
             - git fetch --unshallow
             - git config remote.origin.fetch "+refs/heads/*:refs/remotes/origin/*"
             - git fetch origin
-            - git diff origin/main..origin/uat --quiet && echo "No changes between main and uat, exiting" && exit 0 || echo "New changes in main not present in uat"
+            - git diff origin/main..origin/dev --quiet && echo "No changes between main and dev, exiting" && exit 0 || echo "New changes in main not present in dev"
             - yarn
             - echo "Bumping build numbers" && BUMP_BUILD_OUTPUT=$(yarn bump-build-number | tail -2 | head -1)
             - BUILD_DETAILS=($BUMP_BUILD_OUTPUT)
+            - git pull
             - git commit -am "[skip ci] Bump to Version ${BUILD_DETAILS[0]} (Build ${BUILD_DETAILS[1]})"
             - git tag "release/${BUILD_DETAILS[0]}/build/${BUILD_DETAILS[1]}"
+            - git push origin main
             - git push origin "release/${BUILD_DETAILS[0]}/build/${BUILD_DETAILS[1]}"
             - git checkout --track origin/dev
             - git merge -X theirs main
@@ -39,4 +41,3 @@ pipelines:
             - git push origin dev
             - git push origin uat
             - git push origin release
-            - git push origin main
