--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "start": "react-native start --reset-cache",
-    "ios": "ENVFILE=.env.dev react-native run-ios --scheme ClearSpendMobileDEV  --configuration \"dev.debug\"",
-    "ios-uat": "ENVFILE=.env.uat react-native run-ios --scheme ClearSpendMobileUAT  --configuration \"uat.debug\"",
+    "ios": "ENVFILE=.env.dev react-native run-ios --scheme ClearSpendMobileDEV  --configuration \"dev.Debug\"",
+    "ios-uat": "ENVFILE=.env.uat react-native run-ios --scheme ClearSpendMobileUAT  --configuration \"uat.Debug\"",
     "ios-prod": "ENVFILE=.env.prod react-native run-ios  --scheme ClearSpendMobile",
     "android": "ENVFILE=.env.dev react-native run-android --variant=devDebug  --appIdSuffix dev",
     "android-uat": "ENVFILE=.env.uat react-native run-android --variant=uatDebug  --appIdSuffix uat",
