[MA-290] Add crash tester to dev menu for testing app center debug symbols (pull request #112)
* Add crash tester to dev menu

* Add the app center crash test function

* Scrollview to hold the new buttons

* Add a new env var ENV_NAME for exposing what env is running, and allowing the dev menu to show in DEV/UAT testflight builds

* Update example


Approved-by: Stephen (Stevo) Saucier

--- a/.env.example
+++ b/.env.example
@@ -18,28 +18,33 @@
 # NOTE: builds not using the package.json commands will take variables from the default .env file
 # Aka building in XCode/Android Studio directly
 
-# URLs for each env:
+# URLs and defaults for each env:
 
 ### DEV ENV
+#ENV_NAME=DEV
 #API_URL='https://api.capital.dev.tranwall.net'
 #FA_URL='https://fa.capital.dev.tranwall.net'
 #WEB_URL='https://capital.dev.tranwall.net'
 
 ### UAT ENV
+#ENV_NAME=UAT
 #API_URL=https://api.capital.qa.clearspend.com
 #FA_URL=https://fa.capital.qa.clearspend.com
 #WEB_URL=https://capital.qa.clearspend.com
 
 ### PROD ENV
+#ENV_NAME=PROD
 #API_URL=https://api.clearspend.com
 #FA_URL=https://fa.clearspend.com
 #WEB_URL=https://app.clearspend.com
 
 ### LOCAL REST SERVER
+#ENV_NAME=DEV
 #API_URL='http://localhost:8000'
 #FA_URL='http://localhost:8000'
 #WEB_URL='https://capital.dev.tranwall.net'
 
+ENV_NAME=DEV
 API_URL='http://localhost:8000'
 FA_URL='http://localhost:8000'
 WEB_URL='https://capital.dev.tranwall.net'
