[MA-281] pull down refresh wallet
Approved-by: Rory O'Connor
Approved-by: Stephen (Stevo) Saucier

--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "react-native-permissions": "^3.2.0",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-reanimated": "2.2.2",
+    "react-native-reanimated-carousel": "^2.3.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.7.2",
     "react-native-sensitive-info": "^5.5.8",
@@ -104,7 +105,6 @@
     "@types/react": "^17.0.24",
     "@types/react-native": "^0.65.1",
     "@types/react-native-snap-carousel": "^3.8.4",
-    "@types/react-redux": "^7.1.18",
     "@types/react-test-renderer": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
