[MA-154][MA-23] Digital Wallet Native Modules + core add to Apple Wallet flow (pull request #76)
Approved-by: Carli Botes

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -213,6 +213,9 @@ dependencies {
     implementation 'com.google.android.gms:play-services-base:17.2.1'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
 
+    // TODO: Add when we get access to tapandpay sdk
+    // implementation 'com.stripe:stripe-android-issuing-push-provisioning:1.0.4'
+
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
       exclude group:'com.facebook.fbjni'
     }
