--- a/ios/Podfile
+++ b/ios/Podfile
@@ -31,6 +31,10 @@ target 'ClearSpendMobile' do
   pod 'Permission-FaceID', :path => "#{permissions_path}/FaceID"
   pod 'Permission-PhotoLibrary', :path => "#{permissions_path}/PhotoLibrary"
 
+  # Native iOS pod dependencies (Apple Pay native module)
+  pod 'Alamofire'
+  pod 'Stripe'
+  pod 'SwiftLint'
 
   target 'ClearSpendMobileTests' do
     inherit! :complete
