--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-native-document-picker": "^8.0.0",
     "react-native-flipper": "^0.120.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-haptic-feedback": "^1.13.1",
     "react-native-image-picker": "^4.7.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-mmkv": "^2.0.0",
