--- a/ios/ClearSpendMobile/Info.plist
+++ b/ios/ClearSpendMobile/Info.plist
@@ -22,14 +22,14 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>127</string>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>https</string>
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
-	<key>ITSAppUsesNonExemptEncryption</key>
-	<false/>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSExceptionDomains</key>
@@ -77,6 +77,11 @@
 		<string>PPTelegraf-UltraBold.ttf</string>
 		<string>PPTelegraf-UltraLight.ttf</string>
 		<string>PPTelegraf-Variable.ttf</string>
+	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>remote-notification</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
