--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "react-native-device-info": "^8.5.0",
     "react-native-document-picker": "^8.0.0",
     "react-native-flipper": "^0.120.0",
-    "react-native-gesture-handler": "^1.10.3",
+    "react-native-gesture-handler": "~2.1.3",
     "react-native-haptic-feedback": "^1.13.1",
     "react-native-image-picker": "^4.7.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
