[MA-383] Detect Admin/Permissions Role (pull request #162)

--- a/.env.example
+++ b/.env.example
@@ -52,3 +52,4 @@ FA_CLIENT_ID=''
 STRIPE_PUBLISHABLE_KEY=''
 STRIPE_ACCOUNT=''
 MIXPANEL_PROJECT_TOKEN=fae11a3a59ea09ae6e4e9192a99220fb
+SHOW_ADMIN=true
