--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,6 +1,10 @@
 apply plugin: "com.android.application"
 apply plugin: 'com.google.gms.google-services'
 apply from: project(':react-native-config').projectDir.getPath() + "/dotenv.gradle"
+apply plugin: 'fullstory'
+fullstory {
+ org 'o-19VAEW-na1'
+}
 
 import com.android.build.OutputFile
 
