--- a/ios/Podfile
+++ b/ios/Podfile
@@ -37,6 +37,8 @@ target 'ClearSpendMobile' do
   pod 'Stripe'
   pod 'SwiftLint'
 
+  pod 'FullStory', :http => 'https://ios-releases.fullstory.com/fullstory-1.25.0-xcframework.tar.gz'
+
   target 'ClearSpendMobileTests' do
     inherit! :complete
     # Pods for testing
@@ -45,7 +47,7 @@ target 'ClearSpendMobile' do
   # Enables Flipper
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable the next line.
-  use_flipper!({ 'Flipper' => '0.93.0', 'Flipper-Folly' => '2.6.7', 'Flipper-RSocket' => '1.4.3'},
+  use_flipper!({ 'Flipper' => '0.143.0', 'Flipper-Folly' => '2.6.7'},
                configurations: ['Debug', 'uat.Debug', 'dev.Debug'])
   # use_flipper!()
 
