--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "generate": "ts-node ./scripts/generateTypes.ts && prettier --write ./src/generated/capital.ts && git add ./src/generated/capital.ts"
   },
   "dependencies": {
+    "@fullstory/react-native": "^1.0.4",
     "@gorhom/bottom-sheet": "^4.1.3",
     "@react-native-clipboard/clipboard": "^1.9.0",
     "@react-native-community/blur": "^3.6.0",
