[Ad Hoc] Remove jcenter dependencies , patch react-native-blur (pull request #187)
Approved-by: Stephen (Stevo) Saucier

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "react-native start --reset-cache",
+    "postinstall": "patch-package",
     "ios": "ENVFILE=.env.dev react-native run-ios --scheme ClearSpendMobileDEV  --configuration \"dev.Debug\"",
     "ios-uat": "ENVFILE=.env.uat react-native run-ios --scheme ClearSpendMobileUAT  --configuration \"uat.Debug\"",
     "ios-prod": "ENVFILE=.env.prod react-native run-ios  --scheme ClearSpendMobile",
@@ -75,7 +76,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-mmkv": "^2.0.0",
     "react-native-multitask-blur": "^0.1.5",
-    "react-native-pdf": "^6.4.0",
+    "react-native-pdf": "^6.5.0",
     "react-native-permissions": "^3.2.0",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-reanimated": "2.2.2",
@@ -132,7 +133,9 @@
     "metro-react-native-babel-preset": "^0.66.0",
     "msw": "^0.36.8",
     "nodemon": "^2.0.15",
+    "patch-package": "^6.4.7",
     "plist": "^3.0.4",
+    "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.4.1",
     "react-native-codegen": "^0.0.7",
     "react-test-renderer": "17.0.2",
