--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "react-native-haptic-feedback": "^1.13.1",
     "react-native-image-picker": "^4.7.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-mmkv": "^2.0.0",
     "react-native-multitask-blur": "^0.1.5",
     "react-native-pdf": "^6.5.0",
@@ -96,7 +97,8 @@
     "redux-flipper": "^2.0.0",
     "redux-persist": "^6.0.0",
     "redux-persist-sensitive-storage": "^1.0.0",
-    "twrnc": "^2.0.3"
+    "twrnc": "^2.0.3",
+    "use-debounce": "^8.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
