--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -209,6 +209,12 @@ dependencies {
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
+    implementation ("androidx.appcompat:appcompat:1.3.1") {
+        version {
+            strictly '1.3.1'
+        }
+    }
+
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 
 //     implementation(project(':react-native-maps')){
@@ -218,8 +224,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-base:17.2.1'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
 
-    // TODO: Add when we get access to tapandpay sdk
-    // implementation 'com.stripe:stripe-android-issuing-push-provisioning:1.0.4'
+    implementation 'com.google.android.gms:play-services-tapandpay:18.1.0'
+    implementation 'com.stripe:stripe-android-issuing-push-provisioning:1.1.0'
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
       exclude group:'com.facebook.fbjni'
