--- a/android/build.gradle
+++ b/android/build.gradle
@@ -38,5 +38,7 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://www.jitpack.io' }
+        maven { url "file:$rootDir/app/libs/" }  // Vendored libraries including TapAndPay
+
     }
 }
