--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,7 +1,7 @@
 require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
-platform :ios, '11.0'
+platform :ios, '12.0'
 
 project 'ClearSpendMobile',
 'dev.Debug' => :debug,
@@ -32,11 +32,6 @@ target 'ClearSpendMobile' do
   pod 'Permission-PhotoLibrary', :path => "#{permissions_path}/PhotoLibrary"
   pod 'Permission-Notifications', :path => "#{permissions_path}/Notifications"
 
-  # Native iOS pod dependencies (Apple Pay native module)
-  pod 'Alamofire'
-  pod 'Stripe'
-  pod 'SwiftLint'
-
   pod 'FullStory', :http => 'https://ios-releases.fullstory.com/fullstory-1.25.0-xcframework.tar.gz'
 
   target 'ClearSpendMobileTests' do
@@ -65,17 +60,17 @@ target 'ClearSpendMobile' do
     end
 
     # Flipper requires a crude patch to bump up iOS deployment target, else "error: thread-local storage is not supported for the current target"
-    # Bumping iOS deployment target to match react-native (iOS 11 now) as a temp fix
+    # Bumping iOS deployment target to match ours (iOS 12 now) as a temp fix
     installer.pods_project.targets.each do |target|
       target.build_configurations.each do |config|
         config.build_settings["ONLY_ACTIVE_ARCH"] = "NO"
-        config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '11.0'
+        config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '12.0'
        end
     end
 
     # BUT if you bump iOS deployment target (above), Flipper error "Time.h:52:17: error: typedef redefinition with different types"
     # We need to make one crude patch to RCT-Folly - set `__IPHONE_10_0` to our iOS target + 1
     # See https://github.com/facebook/flipper/issues/834
-    `sed -i -e  $'s/__IPHONE_10_0/__IPHONE_12_0/' #{installer.sandbox.root}/RCT-Folly/folly/portability/Time.h`
+    `sed -i -e  $'s/__IPHONE_10_0/__IPHONE_13_0/' #{installer.sandbox.root}/RCT-Folly/folly/portability/Time.h`
   end
 end
